--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4.1",
         "cloudcreativity/laravel-json-api": "^1.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
@@ -16,11 +16,14 @@
     },
     "require-dev": {
         "cloudcreativity/json-api-testing": "^2.0",
+        "codeception/codeception": "^4.0",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
     },
     "config": {
         "optimize-autoloader": true,
