--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,21 @@
         "php": "^7.4.1",
         "cloudcreativity/laravel-json-api": "^1.6",
         "fideloper/proxy": "^4.0",
+        "fzaninotto/faker": "^1.9",
+        "jzonta/faker-restaurant": "^1.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "cloudcreativity/json-api-testing": "^2.0",
         "codeception/codeception": "^4.0",
+        "codeception/module-asserts": "^1.0.0",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-rest": "^1.2",
         "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
-        "codeception/module-phpbrowser": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
