--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -8,6 +8,7 @@ actor: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://localhost/myapp
+            url: http://opinion-ate.test:8888/
         - \Helper\Acceptance
     step_decorators: ~        
+
